<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNote.NewNoteView"
    android:fitsSystemWindows="true"
    >
    
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/NoteEditor">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/NormalTopMargin"
        android:id="@+id/spacer"
        app:layout_anchor="@id/toolbar"
        app:layout_anchorGravity="bottom">

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/noteheader"
        app:layout_anchor="@id/spacer"
        app:layout_anchorGravity="bottom"
        android:layout_marginTop="@dimen/NormalTopMargin"
        >

        <TextView
            android:id="@+id/date"
            style="@style/date_new_note_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/dummyDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/month"
            style="@style/month_new_note_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dummyMonth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/date" />

        <TextView
            android:id="@+id/year"
            style="@style/year_new_note_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dummyYear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/month" />

        <TextView
            android:id="@+id/day"
            style="@style/day_new_note_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dummyDay"
            app:layout_constraintBottom_toTopOf="@id/month"
            app:layout_constraintStart_toEndOf="@id/date" />

        <TextView
            android:id="@+id/time"
            style="@style/day_new_note_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/dummyTime"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/NormalTopMargin"
        android:id="@+id/spacer2"
        app:layout_anchor="@id/noteheader"
        app:layout_anchorGravity="bottom"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_layout"
        android:hint="@string/TitleHint"
        app:layout_anchor="@id/spacer2"
        app:layout_anchorGravity="bottom"
        android:layout_margin="@dimen/NormalTopMargin">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"/>

    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/NormalTopMargin"
        android:id="@+id/spacer3"
        app:layout_anchor="@id/title_layout"
        app:layout_anchorGravity="bottom"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/spacer3"
        app:layout_anchorGravity="bottom"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/New_note_content_hint"
            android:background="@null"
            />

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addsticker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>